font color correction & paragraph spacing correction for wwr project

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -9,7 +9,7 @@ Fonts are separated by a & */
   --primary-color: #05668d   ;
   --secondary-color: #028090 ;
   --accent1-color: #00a896;
-  --accent2-color: #02c39a;
+  --accent2-color: #faedcd;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Righteous;
@@ -17,13 +17,13 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #05668D;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-color: #faedcd; /* headlines on a colored background */ 
   --paragraph-color-on-white: #05668D; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
+  --paragraph-color-on-color: #faedcd; /* paragraph text on a colored background */ 
   --paragraph-background-color: #05668D  ;
-  --nav-link-color: white;
+  --nav-link-color: #faedcd;
   --nav-background-color: #028090;
-  --nav-hover-link-color: white;
+  --nav-hover-link-color: #faedcd;
   --nav-hover-background-color: #05668d;
 }
 
@@ -67,6 +67,7 @@ p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
   padding: 1em;
+  margin-top: -20px;
 }
 .colors {
   width: 100%;
